--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npm-run-all --parallel sync tailwindwatch",
-    "sync": "browser-sync start --server --files \"**/*\" ",
+    "sync": "browser-sync start --server --files 'index.html' ",
     "tailwindwatch": "npx tailwindcss -i ./assets/css/style.css -o ./dist/style.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "-": "^0.0.1",
+    "@tailwindcss/typography": "^0.5.9",
     "browser-sync": "^2.29.1",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.3.2"
