--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "-": "^0.0.1",
     "@tailwindcss/typography": "^0.5.9",
     "browser-sync": "^2.29.1",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "^4.1.2",
+    "swiper": "^9.4.1",
     "tailwindcss": "^3.3.2"
   }
 }
